# open-world-tamp

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  README.md  package.xml  pyproject.toml  requirements.txt  run_autoformat.sh  run_planner.py  setup.py
grasp/: README.md  demo_vis.py  generate_grasp_dataset.py  gpd_interface.py  graspnet_interface.py  render_gpd_grasps.py  render_grasps.py  segmentation_to_grasp_pipeline.py  tabletop_grasp_gen.py  testing_open3d.py  utils.py
grasp/graspnet/: eval.py  grasp_estimator.py  requirements.txt  test.py  train.py
models/ltamp/: gripper_template.urdf  ik_cube_blue.urdf  ik_cube_green.urdf  ik_cube_orange.urdf  ik_cube_red.urdf  ik_cube_yellow.urdf  ik_placement_dot.urdf  panda_arm_hand_on_carter_collision.urdf  panda_arm_hand_on_carter_visual.urdf
models/misc/: green_pillar.urdf  short_floor.urdf
models/srl/carter/: package.xml
models/srl/carter/urdf/: carter.rbc  carter.urdf  carter_franka.urdf.xacro
open_world/estimation/: association.py  belief.py  bounding.py  clustering.py  completion.py  concave.py  dnn.py  flow.py  geometry.py  observation.py  surfaces.py  tables.py
open_world/exploration/: environment.py  utils.py  utils_graph.py  utils_grid_generator.py  utils_motion_planning_interface.py
open_world/nlp/: prompt.txt  speech_to_goal.py  text_to_goal.py
open_world/planning/: grasping.py  graspnet.py  ik.py  planner.py  pouring.py  primitives.py  pushing.py  retired.py  samplers.py  stacking.py  streams.py  visibility.py
open_world/real_world/: ros_utils.py  tasks.py
owt/: pb_utils.py  utils.py  voxel_utils.py
pybullet_planning/: create_ir_database.py
scratch/: example_hardcode.py  run_estimator.py
tests/: test_environment.py  test_exploration.py  test_planner.py  test_run_policy.py  test_seg_planner.py
vision_utils/: README.md  doc_segmentation_and_6dpose.txt  doc_shapecompletion.txt  requirements.txt
(+658 files in other folders)
