<?xml version="1.0"?>
<package format="2">
  <name>carter</name>
  <version>0.0.1</version>
  <description>Carter Robot</description>
  <maintainer email="hmazhar@nvidia.com">Patrick Hussey</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
